Fixed a display issue with text wrapping in the edit/delete admin table columns.

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -267,6 +267,11 @@ tr:last-child > td {
   border-bottom: none;
 }
 
+.admin_column {
+  width: 75px;
+  text-align: right;
+}
+
 
 /*----- Account drop down menu -----*/
 #account_dd_wrapper {
